# moonrockers

./: README.md  requirements.txt  system_setup.sh  test_motors.py
config/: hardware_config.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/rover_control/lib/rover_control/: autonomous_rover_executable
ros2_ws/install/rover_control/share/rover_control/: package.sh  package.xml
ros2_ws/install/rover_perception/lib/rover_perception/: apriltag_pose_estimator
ros2_ws/install/rover_perception/share/rover_perception/: package.ps1  package.sh  package.xml
ros2_ws/install/rover_power_monitor/lib/rover_power_monitor/: rover_power_monitor_node
ros2_ws/install/rover_power_monitor/share/rover_power_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/motor_control/: package.xml
ros2_ws/src/rover_control/: setup.py
ros2_ws/src/rover_perception/: setup.py
ros2_ws/src/rover_perception/rover_perception/: april_tag_detection.py
ros2_ws/src/rover_power_monitor/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_power_monitor/rover_power_monitor/: rover_power_monitor_node.py
ros2_ws/src/teleop_control/: CMakeLists.txt  package.xml
src/hardware/: actuator_controller.py  can_motor_controller.py  stepper_controller.py
src/ros2_ws/src/rover_env/rover_env/: vision_node.py
