<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_perception</name>
  <version>0.0.0</version>
  <description>Hosts the RealSense driver node to publish rectified images, depth, and IMU data. Contains the AprilTag detection node that run on the camera data. Also includes a node to rotate the camera via the stepper motor (using the encoder feedback).</description>
  <maintainer email="john.miller@mines.sdsmt.edu">John Miller</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- These Python libraries are required -->
  <exec_depend>apriltag</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
